# airflow-dbt

./: .env-local  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
cosmos/: dbt_project.yml  profiles.yml
cosmos/macros/: drop_table.sql
cosmos/models/pokedex/: source.yaml
cosmos/models/pokedex/pokemons_moves/: tb_pokemons_moves.sql
cosmos/models/pokedex/types/: obt_pm_types.sql  (+1 more)
cosmos/models/testes/: my_teste.sql
cosmos/seeds/: moves.csv  moves_pokemons.csv  pokemons.csv
dags/: dag_finance_dbt.py  dag_finance_dbt_apple.py  dag_finance_dbt_google.py  dag_ingestion_data.py  dag_join_model.py  dag_moves_types.py  dag_my_profile.py  dag_pokemons_types.py  dag_profile_cosmos.py  dag_test.py
dags/modules/: check_soda.py
dbt_airflow/: .env  docker-compose.yaml  pyproject.toml
dbt_airflow/airflow/: Dockerfile  airflow.cfg  requirements.txt
dbt_airflow/airflow/dags/: dag_finance_dbt_apple.py  dag_finance_dbt_google.py  dag_join_model.py
dbt_airflow/dbt/airflowdbt/: dbt_project.yml
dbt_airflow/dbt/airflowdbt/models/: schema.yaml  source.yaml
dbt_airflow/dbt/airflowdbt/models/google/: model_google.sql
dbt_airflow/dbt/airflowdbt/models/join/: join.sql
dbt_airflow/postgres/: docker_postgres_init.sql
dbt_api/: .user.yml  Dockerfile  app.py  copy_postgres.sh  dbt_project.yml  docker-compose.yaml  profiles.yml  script.sh
dbt_api/files/: aapl.csv  goog.csv  tables.sql
dbt_api/models/: model_apple.sql
soda/: configuration.yaml
soda/check/sources/: raw_pokemons.yaml  raw_pokemons_types.yaml  raw_teste.yaml
(+5 files in other folders)
